--- a/#style.css
+++ b/#style.css
@@ -1,4 +1,29 @@
 body {
-    color:white;
-    background:rgb(255, 2, 149);
+    color:rgb(255, 255, 255);
+    background:rgb(1, 1, 1);
+    margin: 0px;
+}
+
+header{
+    border-bottom: solid 2px rgb(42, 122, 228);
+    padding: 20px;
+    font-size: 32px;
+    color: rgb(42, 122, 228);
+}
+
+section {
+    background:rgb(184, 156, 213);
+    padding-bottom: 80px;
+    padding-top: 80px;
+    display: flex;
+    justify-content: center;
+}
+
+.chamada-texto {
+    margin-right: 5%;
+}
+
+section {
+    display: block;
+    unicode-bidi: isolate;
 }
