--- a/#style.css
+++ b/#style.css
@@ -2,6 +2,7 @@ body {
     color:rgb(255, 255, 255);
     background:rgb(1, 1, 1);
     margin: 0px;
+    font-family: "Sour Gummy", sans-serif;
 }
 
 header{
@@ -23,7 +24,10 @@ section {
     margin-right: 5%;
 }
 
-section {
-    display: block;
-    unicode-bidi: isolate;
+h1 {
+    font-size:40px;
+}
+
+p{
+    font-size:24px;
 }
